--- a/CypressAutomation/package.json
+++ b/CypressAutomation/package.json
@@ -4,19 +4,21 @@
   "description": "cypress",
   "main": "index.js",
   "scripts": {
-    "cypress:run": "npx cypress run --headless --browser chrome",
+    "clean": "del-cli cypress/report/*.* && del-cli cypress/report/mochawesome-report/*.* ",
+    "cypress:run": "npx cypress run --browser chrome",
     "merge": "npx mochawesome-merge cypress/report/mochawesome-report/*.json > cypress/report/output.json",
-    "generate_mochawesome_report": "npx marge ./cypress/report/output.json --reportDir cypress/report/"
+    "generate_mochawesome_report": "npx marge ./cypress/report/output.json --reportDir cypress/report/abc.html"
   },
   "author": "pawan",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^5.0.0",
+    "cypress": "^5.5.0",
     "cypress-xpath": "^1.6.0",
+    "del-cli": "^3.0.1",
     "mocha": "^8.1.3",
     "mochawesome": "^6.1.1",
     "mochawesome-merge": "^4.1.0",
     "mochawesome-report-generator": "^5.1.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5"    
   }
 }
