--- a/CypressAutomation/package.json
+++ b/CypressAutomation/package.json
@@ -4,15 +4,17 @@
   "description": "cypress",
   "main": "index.js",
   "scripts": {
-    "clean": "del-cli cypress/report/*.* && del-cli cypress/report/mochawesome-report/*.* ",
-    "cypress:run": "npx cypress run --browser chrome",
-    "merge": "npx mochawesome-merge cypress/report/mochawesome-report/*.json > cypress/report/output.json",
-    "generate_mochawesome_report": "npx marge ./cypress/report/output.json -f report -o cypress/report"
+    "clean": "del-cli --dry-run cypress/reports/*.*",
+    "cypress:run": "npx cypress run --env environment=qa --browser chrome || echo Skipping schema build",    
+    "cypress:report": "generate-mochawesome-report"
+    
+    
   },
   "author": "pawan",
   "license": "ISC",
   "devDependencies": {
     "cypress": "^5.6.0",
+    "cypress-mochawesome-reporter": "^1.3.0",
     "cypress-xpath": "^1.6.1",
     "del-cli": "^3.0.1",
     "mocha": "^8.2.1",
