--- a/CypressAutomation/package.json
+++ b/CypressAutomation/package.json
@@ -4,11 +4,9 @@
   "description": "cypress",
   "main": "index.js",
   "scripts": {
-    "clean": "del-cli --dry-run cypress/reports/*.*",
-    "cypress:run": "npx cypress run --env environment=qa --browser chrome || echo Skipping schema build",    
+    "clean": "trash cypress/reports && trash cypress/results",
+    "cypress:run": "npx cypress run --env environment=qa --browser chrome || echo Skipping schema build",
     "cypress:report": "generate-mochawesome-report"
-    
-    
   },
   "author": "pawan",
   "license": "ISC",
@@ -21,6 +19,7 @@
     "mochawesome": "^6.2.1",
     "mochawesome-merge": "^4.2.0",
     "mochawesome-report-generator": "^5.1.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "trash-cli": "^4.0.0"
   }
 }
